--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DressUp - Login</title>
+  <title>Login</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
 
@@ -259,7 +259,7 @@
 
     <section class="qr-column">
       <p>Scan to style!</p>
-      <img src="qr.png" alt="QR code for web app" class="qr-code" />
+      <img src="static/qr.png" alt="QR code for web app" class="qr-code" />
     </section>
   </main>
 
@@ -298,7 +298,7 @@
       return;
     }
 
-    window.location.href = 'try.html';
+    window.location.href = 'upload.html';
   });
 
   // Signup handler
@@ -319,7 +319,7 @@
     }
 
     alert('Account created! Logging you in...');
-    window.location.href = 'try.html';
+    window.location.href = 'upload.html';
   });
 </script>
 </body>
